Fix rendering of margin text on small screens

--- a/src/components/MarginText/index.module.scss
+++ b/src/components/MarginText/index.module.scss
@@ -1,7 +1,25 @@
 .text {
   float: left;
   display: block;
-  margin-left: -90px;
   list-style-type: none;
-  padding-left: 0;
+  position: absolute;
+
+  background-color: var(--ifm-color-secondary-contrast-background);
+  border-radius: var(--ifm-global-radius);
+  padding-inline: calc(0.5 * var(--ifm-global-radius));
+
+  $ada-lang-margin-text-min-width: 1770px;
+
+  @media (min-width: #{$ada-lang-margin-text-min-width}) {
+    left: calc(var(--doc-sidebar-width) + 1rem);
+  }
+
+  @media (min-width: 997px) and (max-width: #{$ada-lang-margin-text-min-width - 1}) {
+    --ada-lang-content-width: calc(0.75 * (100% - var(--doc-sidebar-width)));
+    left: calc(var(--doc-sidebar-width) + var(--ada-lang-content-width));
+  }
+
+  @media (max-width: 996px) {
+    right: 1.5rem;
+  }
 }
